[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
hyper = { version = "1", features=["http2"] }
tokio = { version = "1", features=["macros","rt-multi-thread"] }
serde = { version="1", features=["derive"] }
serde_json = "1"
tower = "0.5"
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.15"
reqwest = { version="0.12", default-features=false, features=["json","http2","rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["fmt","env-filter"] }
